[gd_scene load_steps=5 format=3 uid="uid://8p7oyvsmilvn"]

[ext_resource type="Script" path="res://scripts/Joystick.gd" id="1_c03jv"]
[ext_resource type="Texture2D" uid="uid://cwk2afynui7ti" path="res://assets/UI/Outer Ring Joystick.png" id="2_75nxw"]
[ext_resource type="Texture2D" uid="uid://cp7gj87fc2nr8" path="res://assets/UI/Inner Solid Joystick.png" id="3_ye5y0"]
[ext_resource type="Script" path="res://scripts/InnerSolidJoystick.gd" id="4_ctjmy"]

[node name="Joystick" type="Node2D"]
script = ExtResource("1_c03jv")

[node name="OuterRingJoystick" type="Sprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
texture = ExtResource("2_75nxw")

[node name="InnerSolidJoystick" type="Sprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
scale = Vector2(0.383333, 0.383333)
texture = ExtResource("3_ye5y0")
script = ExtResource("4_ctjmy")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -566.0
offset_top = -558.0
offset_right = 574.0
offset_bottom = 566.0

[connection signal="button_down" from="Button" to="InnerSolidJoystick" method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="InnerSolidJoystick" method="_on_button_button_up"]
